--- a/RPICommunicator_V1/app/src/main/AndroidManifest.xml
+++ b/RPICommunicator_V1/app/src/main/AndroidManifest.xml
@@ -4,16 +4,18 @@
 
     <application
         android:allowBackup="true"
-
         android:icon="@mipmap/lightbulbround"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/lightbulbround"
         android:supportsRtl="true"
         android:theme="@style/Theme.RPICommunicator_V1">
         <activity
+            android:name=".ViewAndModels.BikeTourActivity"
+            android:exported="true" />
+        <activity
             android:name=".ViewAndModels.PlantView"
             android:label="@string/title_activity_plant_view"
-            android:theme="@style/Theme.RPICommunicator_V1.NoActionBar"></activity>
+            android:theme="@style/Theme.RPICommunicator_V1.NoActionBar" />
         <activity android:name=".ViewAndModels.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +24,5 @@
             </intent-filter>
         </activity>
     </application>
-
-
 
 </manifest>
