--- a/.gitignore
+++ b/.gitignore
@@ -87,18 +87,61 @@ lint/tmp/
 # Android Profiling
 *.hprof
 
-\*.iml  
-.gradle  
-/local.properties  
-/.idea/caches  
-/.idea/libraries  
-/.idea/modules.xml  
-/.idea/workspace.xml  
-/.idea/navEditor.xml  
-/.idea/assetWizardSettings.xml  
-.DS\_Store  
-/build  
-/captures  
-.externalNativeBuild  
-.cxx  
+\*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS\_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
 local.properties
+
+
+#Google keys
+values.xml
+
+https://stackoverflow.com/questions/16736856/what-should-be-in-my-gitignore-for-an-android-studio-project
+#built application files
+*.apk
+*.ap_
+*.aab
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
+
+# Android Studio
+*.iml
+.idea
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle
+build/
+.navigation
+captures/
+output.json
+
+#NDK
+obj/
+.externalNativeBuild
