--- a/RPICommunicator_V1/app/src/main/AndroidManifest.xml
+++ b/RPICommunicator_V1/app/src/main/AndroidManifest.xml
@@ -11,12 +11,14 @@
         android:theme="@style/Theme.RPICommunicator_V1">
         <activity
             android:name=".ViewAndModels.BikeTourActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".ViewAndModels.PlantView"
             android:label="@string/title_activity_plant_view"
-            android:theme="@style/Theme.RPICommunicator_V1.NoActionBar" />
-        <activity android:name=".ViewAndModels.MainActivity">
+            android:theme="@style/Theme.RPICommunicator_V1.NoActionBar"
+            android:exported="false"/>
+        <activity android:name=".ViewAndModels.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
