--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,17 @@ android {
 
     defaultConfig {
         applicationId "com.example.rpicommunicator_v1"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -29,6 +34,8 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+
 }
 
 
@@ -38,8 +45,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.navigation:navigation-fragment:2.4.1'
-    implementation 'androidx.navigation:navigation-ui:2.4.1'
+    implementation 'androidx.navigation:navigation-fragment:2.4.2'
+    implementation 'androidx.navigation:navigation-ui:2.4.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -72,6 +79,6 @@ dependencies {
     //Swipe to reload
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
-    //Diagramm library
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    //Diagram library
+    implementation 'com.github.PhilJay:MPAndroidChart:3.1.0'
 }
