--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,9 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:3.1.0'
 
     implementation "io.grpc:grpc-okhttp:1.43.2"
+
+
+    implementation "androidx.camera:camera-camera2:1.0.2"
+    implementation "androidx.camera:camera-lifecycle:1.0.2"
+    implementation "androidx.camera:camera-view:1.2.0-alpha01"
 }
