--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
 
     implementation "androidx.room:room-runtime:2.4.2"
     kapt "androidx.room:room-compiler:2.4.2"
-
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.4.1"
