--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
-
     implementation "androidx.room:room-runtime:2.4.2"
     kapt "androidx.room:room-compiler:2.4.2"
     implementation 'com.makeramen:roundedimageview:2.3.0'
@@ -96,8 +95,10 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:1.0.2"
     implementation "androidx.camera:camera-view:1.2.0-alpha01"
 
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
     implementation("com.google.dagger:hilt-android:2.38.1")
     kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+    implementation 'com.google.code.gson:gson:2.8.7'
 
 
 }
