--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,10 @@ buildscript {
     dependencies {
         //   val kotlinVersion = "1.7.10"
 
-        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:7.2.2'
         classpath 'com.google.gms:google-services:4.3.10'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
-        classpath("com.google.dagger:hilt-android-gradle-plugin:2.38.1")
+        classpath('com.google.dagger:hilt-android-gradle-plugin:2.40.1')
         // classpath "org.jetbrains.kotlin:kotlin-serialization:1.7.10"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
