--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.13'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
         classpath('com.google.dagger:hilt-android-gradle-plugin:2.40.1')
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.18'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
