--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,41 +42,57 @@ android {
     lintOptions {
         disable "JvmStaticProvidesInObjectDetector", "FieldSiteTargetOnQualifierAnnotation", "ModuleCompanionObjects", "ModuleCompanionObjectsNotInModuleParent"
     }
+
+       /* sourceSets {
+            main {
+                /*java {
+                    srcDirs += 'build/generated/source/proto/main/java'
+                }
+                kotlin {
+
+                    srcDirs += 'build/generated/source/proto/debug/grpc/com/example/rpicommunicator_v1'
+                   // srcDirs += 'build/generated/source/proto/main/kotlin'
+                }
+                proto {
+                    srcDir 'src/main/proto'
+                }
+            }
+    }*/
 }
 
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.navigation:navigation-fragment:2.5.3'
-    implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.navigation:navigation-fragment:2.6.0'
+    implementation 'androidx.navigation:navigation-ui:2.6.0'
     implementation 'androidx.leanback:leanback:1.0.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 
-    implementation "androidx.room:room-runtime:2.4.3"
-    kapt "androidx.room:room-compiler:2.4.3"
+    implementation "androidx.room:room-runtime:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
-    implementation("androidx.activity:activity-ktx:1.6.1")
-    implementation("androidx.fragment:fragment-ktx:1.5.5")
+    implementation("androidx.activity:activity-ktx:1.7.2")
+    implementation("androidx.fragment:fragment-ktx:1.6.0")
 
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
     // Lifecycles only (without ViewModel or LiveData)
-    implementation "androidx.lifecycle:lifecycle-runtime:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-runtime:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
     // Annotation processor
-    annotationProcessor "androidx.lifecycle:lifecycle-common-java8:2.5.1"
+    annotationProcessor "androidx.lifecycle:lifecycle-common-java8:2.6.1"
 
     //Swipe to reload
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
@@ -94,9 +110,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
 
     // GRPC Libraries
-    implementation 'io.grpc:grpc-okhttp:1.49.0'
-    implementation 'io.grpc:grpc-protobuf-lite:1.49.0'
-    implementation 'io.grpc:grpc-stub:1.49.0'
+    implementation 'com.google.protobuf:protobuf-javalite:3.20.1'
+    implementation 'com.google.protobuf:protobuf-kotlin-lite:3.20.1'
+    //implementation 'io.grpc:grpc-okhttp:1.49.0'
+    //implementation 'io.grpc:grpc-protobuf-lite:1.49.0'
+    //implementation 'io.grpc:grpc-stub:1.49.0'
     compileOnly 'org.apache.tomcat:annotations-api:6.0.53' // necessary for Java 9+
 }
 kapt {
@@ -106,21 +124,79 @@ kapt {
 
 protobuf {
     protoc {
+        artifact = 'com.google.protobuf:protoc:3.20.1'
+    }
+    plugins {
+        javalite {
+            artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
+        }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+               remove java
+            }
+            task.builtins {
+                java {
+                option 'lite'}
+            }
+        }
+    }
+    /*protoc {
+        artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'//'com.google.protobuf:protoc:3.13.0'
+    }*/
+//    generatedFilesBaseDir = "$projectDir/src/main/java/"
+    /*generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                remove java
+            }
+            task.builtins {
+                java {
+                    option "lite"
+                   // outputSubDir = '../../../../../src/main/java/'
+                }
+            }
+        }
+    }*/
+    /*protoc {
+        artifact = "com.google.protobuf:protoc:3.0.0"
+    }
+    plugins {
+        lite {
+            artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0"
+        }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                remove java
+            }
+            task.plugins {
+                lite {
+                    outputSubDir = ''
+                }
+            }
+        }
+    }*/
+   // generatedFilesBaseDir = "$projectDir/src/main/java/"
+   /* protoc {
         artifact = "com.google.protobuf:protoc:3.21.1"
     }
     plugins {
-        grpc {
+        lite {
             artifact = 'io.grpc:protoc-gen-grpc-java:1.49.0'
         }
     }
     generateProtoTasks {
         all().each { task ->
             task.builtins {
-                java { option 'lite' }
+               // java { option 'lite' }
+                remove java
             }
             task.plugins {
                 grpc { option 'lite' }
             }
         }
-    }
+    }*/
 }
