--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,32 +32,16 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     buildFeatures {
         viewBinding true
     }
     namespace 'com.example.rpicommunicator_v1'
-    lintOptions {
-        disable "JvmStaticProvidesInObjectDetector", "FieldSiteTargetOnQualifierAnnotation", "ModuleCompanionObjects", "ModuleCompanionObjectsNotInModuleParent"
+    lint {
+        disable 'JvmStaticProvidesInObjectDetector', 'FieldSiteTargetOnQualifierAnnotation', 'ModuleCompanionObjects', 'ModuleCompanionObjectsNotInModuleParent'
     }
-
-       /* sourceSets {
-            main {
-                /*java {
-                    srcDirs += 'build/generated/source/proto/main/java'
-                }
-                kotlin {
-
-                    srcDirs += 'build/generated/source/proto/debug/grpc/com/example/rpicommunicator_v1'
-                   // srcDirs += 'build/generated/source/proto/main/kotlin'
-                }
-                proto {
-                    srcDir 'src/main/proto'
-                }
-            }
-    }*/
 }
 
 
@@ -66,7 +50,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation 'androidx.navigation:navigation-fragment:2.6.0'
     implementation 'androidx.navigation:navigation-ui:2.6.0'
     implementation 'androidx.leanback:leanback:1.0.0'
@@ -80,7 +64,7 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
     implementation("androidx.activity:activity-ktx:1.7.2")
-    implementation("androidx.fragment:fragment-ktx:1.6.0")
+    implementation("androidx.fragment:fragment-ktx:1.6.1")
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.6.1"
