--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,9 @@ dependencies {
     kapt("com.google.dagger:hilt-android-compiler:2.38.1")
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    // curl web request
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+
     implementation 'io.grpc:grpc-okhttp:1.49.0'
     implementation 'io.grpc:grpc-protobuf-lite:1.49.0'
     implementation 'io.grpc:grpc-stub:1.49.0'
